Made all components uniform

--- a/TODO
+++ b/TODO
@@ -5,9 +5,9 @@ Finish main page - WORKING
 
 Clean up the project structure - DONE
 
-Make all components uniform (width) - WORKING
+Make all components uniform (width) - DONE
 
-Polish Compare countries section
+Polish Compare countries section - WORKING
 
 Finish european countries overall ranking
 
@@ -16,5 +16,7 @@ Make the leaflet map work with european countries leaderboard
 Make all categories layout use responsive grids
 
 Polish all parts with padding and radius
+
+Polish responsibility and text wrapping
 
 Design nicer logo that merges europe in data with the eu flag/stars
