Polish compare countries section

--- a/TODO
+++ b/TODO
@@ -7,9 +7,9 @@ Clean up the project structure - DONE
 
 Make all components uniform (width) - DONE
 
-Polish Compare countries section - WORKING
+Polish Compare countries section - DONE
 
-Finish european countries overall ranking
+Finish european countries overall ranking - WORKING
 
 Make the leaflet map work with european countries leaderboard
 
