Finished european ranking overall

--- a/TODO
+++ b/TODO
@@ -9,7 +9,9 @@ Make all components uniform (width) - DONE
 
 Polish Compare countries section - DONE
 
-Finish european countries overall ranking - WORKING
+Finish european countries overall ranking - DONE
+
+Add Switzerland to the countries list
 
 Make the leaflet map work with european countries leaderboard
 
@@ -20,3 +22,11 @@ Polish all parts with padding and radius
 Polish responsibility and text wrapping
 
 Design nicer logo that merges europe in data with the eu flag/stars
+
+
+
+###
+News page
+###
+
+Ask about interest in getting news about things in eu and ask for email
