--- a/TODO
+++ b/TODO
@@ -11,7 +11,7 @@ Polish Compare countries section - DONE
 
 Finish european countries overall ranking - DONE
 
-Add Switzerland to the countries list
+Add Switzerland to the countries list - Working
 
 Make the leaflet map work with european countries leaderboard
 
