--- a/TODO
+++ b/TODO
@@ -15,7 +15,7 @@ Add Switzerland to the countries list - DONE
 
 Make the leaflet map work with european countries leaderboard
 
-Make all categories layout use responsive grids
+Make all categories layout use responsive grids - WORKING
 
 Polish all parts with padding and radius
 
