Fix text wrapping and responsibility

--- a/TODO
+++ b/TODO
@@ -21,7 +21,7 @@ Make all categories use show more button (to show categories that would mess the
 
 Polish all parts with padding and radius
 
-Polish responsibility and text wrapping - WORKING
+Polish responsibility and text wrapping - DONE
 
 Make search box use also scroll area
 
