Make search box also use scroll area

--- a/TODO
+++ b/TODO
@@ -23,7 +23,7 @@ Polish all parts with padding and radius - DONE
 
 Polish responsibility and text wrapping - DONE
 
-Make search box use also scroll area - WORKING
+Make search box use also scroll area - DONE
 
 Make it use downloaded font (Roboto) - DONE 
 
