Temp leaderboard extract

--- a/TODO
+++ b/TODO
@@ -31,7 +31,7 @@ Design nicer logo that merges europe in data with the eu flag/stars - DONE
 
 Investigate if the emojis are rendering everywhere
 
-Extract leaderboard component into its own component
+Extract leaderboard component into its own component - DONE/partially
 
 
 ###
